[gd_scene load_steps=7 format=3 uid="uid://dq8a70s65hjut"]

[ext_resource type="Script" path="res://Personnages/assaillant/assaillant.gd" id="1_vluel"]
[ext_resource type="Script" path="res://Personnages/assaillant/CorpsAssaillant.gd" id="2_8soul"]
[ext_resource type="SpriteFrames" uid="uid://bwxltoshgwwee" path="res://Personnages/assaillant/assaillantAnimation.tres" id="3_utbc2"]
[ext_resource type="LabelSettings" uid="uid://dnouf360rvrr0" path="res://InterfaceUtilisateur/Labels Settings/LabelSetting_CharacterLabel.tres" id="4_cxjkw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mnfly"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lrshl"]
radius = 50.0

[node name="assaillant" type="Area2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_vluel")

[node name="CorpsNPC" type="CharacterBody2D" parent="."]
scale = Vector2(1.15, 1.3)
collision_layer = 4
script = ExtResource("2_8soul")

[node name="TimerAnimation" type="Timer" parent="CorpsNPC"]

[node name="AnimationNPC" type="AnimatedSprite2D" parent="CorpsNPC"]
sprite_frames = ExtResource("3_utbc2")
animation = &"idle"
frame_progress = 0.34358

[node name="Hitbox" type="CollisionShape2D" parent="CorpsNPC"]
shape = SubResource("CapsuleShape2D_mnfly")

[node name="TimerCorrectionAnimation" type="Timer" parent="CorpsNPC"]

[node name="Zone_Detection_Joueur" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lrshl")

[node name="Nom" type="Label" parent="."]
offset_left = -20.0
offset_top = -41.0
offset_right = 20.0
offset_bottom = -18.0
label_settings = ExtResource("4_cxjkw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimerDetection" type="Timer" parent="."]
wait_time = 0.2

[node name="TimerVisibilite" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="CorpsNPC/TimerAnimation" to="CorpsNPC" method="_on_timer_animation_timeout"]
[connection signal="timeout" from="CorpsNPC/TimerCorrectionAnimation" to="CorpsNPC" method="_on_timer_correction_animation_timeout"]
[connection signal="timeout" from="TimerVisibilite" to="." method="_on_timer_visibilite_timeout"]
